--- a/recipes/templates/recipes/pages/recipe-view.html
+++ b/recipes/templates/recipes/pages/recipe-view.html
@@ -1,4 +1,5 @@
 {% extends 'global/base.html' %}
+{% block title %}Recipe | {% endblock title %}
 
 {% block content %}
 <div class="main-content main-content-detail container">
