--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -16,22 +16,29 @@
     <div class="recipe-author">
         <span class="recipe-author-item">
             <i class="fas fa-user"></i>
-            {% if recipe.author.first_name %}
-                {{ recipe.author.first_name }} {{ recipe.author.last_name}}
+            {% if recipe.author is not None %}
+                {% if recipe.author.first_name %}
+                    {{ recipe.author.first_name }} {{ recipe.author.last_name}}
+                {% else %}
+                    {{recipe.author.username}}
+                {% endif %}
             {% else %}
-                {{recipe.author.username}}
+                Desconhecido
             {% endif %}
         </span>
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"></i>
             {{ recipe.created_at|date:"d/m/Y" }} {{ recipe.created_at|date:"H:i" }}
         </span>
+        
+        {% if recipe.category is not None %}
         <span class="recipe-author-item">
             <a href="{% url 'recipes:category' recipe.category.id %}">
                 <i class="fas fa-layer-group"></i>
                 <span>{{ recipe.category.name }}</span>
             </a>
         </span>
+        {% endif %}
     </div>
     <div class="recipe-content">
         <p>{{ recipe.description }}</p>
